webapp/static/temporal.css
/* ... */
.focus-visible\:\[\&_a\]\:ring-2 a:focus-visible {
	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width)
		var(--tw-ring-offset-color);
	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width))
		var(--tw-ring-color);
	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}

.focus-visible\:\[\&_a\]\:ring-primary\/70 a:focus-visible {
	--tw-ring-color: rgb(var(--color-border-focus-info) / 0.7);
}

.focus-visible\:\[\&_a\]\:ring-success a:focus-visible {
	--tw-ring-color: rgb(var(--color-surface-success-loud));
}

.\[\&_button\]\:w-full button {
	width: 100%;
}

